# sherlock_ros

./: README.md  todo.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mecanum_nodes/lib/mecanum_nodes/: controller  feedback_controller_node  planner  serial  serial_sub  stepper_pub
install/mecanum_nodes/share/mecanum_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/mecanum_nodes_cpp/share/mecanum_nodes_cpp/: package.bash  package.ps1  package.sh  package.xml
install/my_bot/lib/my_bot/: filtered_path_publisher_node  (+1 more)
log/: latest_build  latest_list
sherlock_ros-main/install/mecanum_nodes/share/mecanum_nodes/: package.dsv  package.xml  package.zsh
sherlock_ros-main/log/: latest_build
sherlock_ros-main_Cpp/install/: local_setup.sh  setup.sh
sherlock_ros-main_Cpp/log/: latest_build
sherlock_ros-main_Cpp/src/mecanum_nodes/: setup.cfg
sherlock_ros-main_Cpp/src/mecanum_nodes_cpp/: CMakeLists.txt
src/mecanum_nodes/: setup.py
src/mecanum_nodes/mecanum_nodes/: controller_node.py  fbController  fbController.py  main.py  mecanum_kinematics.py  planner_node.py  serial_publisher.py  serial_subscriber.py  stepper_pub.py
src/my_bot/: package.xml  setup.py
src/my_bot/config/: map1.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/my_bot/launch/: bringup.launch.py  global_planner_launcher.launch.py  global_planner_only.launch.py  localization_launch.py  localization_only.launch.py  navigation_launch.py
src/my_bot/my_bot/: filtered_path_publisher_node.py  goal_publisher_node.py
(+39 files in other folders)
