<package format="3">
  <name>mecanum_nodes</name>
  <version>0.0.1</version>
  <description>Planner and Controller for Mecanum Robot in ROS2</description>
  <maintainer email="your@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>   
  </export>
</package>

